[package]
name = "ov-blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.4"
actix-web = "4.4"
actix-cors = "0.6.5"
futures = "0.3.29"
serde = "1.0.193"
tokio = {version = "1.34.0", features = ["full"]}
lazy_static = "1.4.0"
log = "0.4.20"
env_logger = "0.10.1"

[dependencies.mongodb]
version = "2.7.1"
features = ["tokio-runtime"]
